# OCaml

CODE/: std1.ml
COURS/: COURS4.ml  COURS5.ml
TD/: std1.mli  std2.ml  std2.mli  std3.ml  std3.mli  std4.ml  std4.mli  std5.ml  std5.mli  std6.ml  std6.mli
TP/: tp1.ml  tp1.mli  tp2.ml  tp2.mli  tp3.ml  tp3.mli  tp4.ml  tp4.mli
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/: dune  lexer.ml  lexer.mll  mylib.cma  mylib.cmxa  mylib.cmxs  ocamlinit.ml  tme5.ml  yaccParser.ml  yaccParser.mli  yaccParser.mly
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.dune/: configurator  configurator.v2
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.merlin-conf/: exe-tme5  lib-mylib
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.mylib.objs/: input.impl.all-deps  input.ml.d  lexer.impl.all-deps  lexer.ml.d  printer.ml.d  yaccParser.ml.d  yaccParser.mli.d
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.mylib.objs/byte/: input.cmi  input.cmo  input.cmt  lexer.cmi  lexer.cmo  lexer.cmt  printer.cmi  printer.cmo  printer.cmt  syntax.cmi  syntax.cmo  syntax.cmt  yaccParser.cmi  yaccParser.cmo  yaccParser.cmt  yaccParser.cmti
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.mylib.objs/native/: input.cmx  lexer.cmx  printer.cmx  syntax.cmx  yaccParser.cmx
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.tme5.eobjs/byte/: dune__exe__Tme5.cmi  dune__exe__Tme5.cmo  dune__exe__Tme5.cmt
TP/Fichiers pour les TME 5 et 6-20230101/_build/default/.tme5.eobjs/native/: dune__exe__Tme5.cmx
(+7 files in other folders)
